Update names and lint checking of java code